--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,6 +1,3 @@
-@import './pages/auth.scss';
-@import './pages/room.scss';
-@import './pages/question.scss';
-@import './reset.scss';
-@import './buttons.scss';
-@import './roomCodeButton.scss';
+@import './_base/reset.scss';
+@import './_components/buttons.scss';
+@import './_components/roomCodeButton.scss';
