--- a/src/pages/AdminRoom/styles.scss
+++ b/src/pages/AdminRoom/styles.scss
@@ -1,4 +1,4 @@
-#page-room {
+#admin-page-room {
   header {
     padding: 2.4rem;
     border-bottom: 0.1rem solid #e2e2e2;
@@ -16,8 +16,13 @@
         }
       }
 
-      > button {
+      button {
         height: 4rem;
+      }
+
+      .buttons {
+        display: flex;
+        gap: 16px;
       }
     }
   }
