--- a/src/pages/Room/styles.scss
+++ b/src/pages/Room/styles.scss
@@ -104,6 +104,35 @@
 
     .question-list {
       margin-top: 3.2rem;
+
+      > div {
+        button {
+          border: 0;
+          background: transparent;
+          cursor: pointer;
+          transition: 0.2s;
+
+          &.like-button {
+            display: flex;
+            align-items: flex-end;
+            gap: 8px;
+            color: #737380;
+
+            &.liked {
+              color: #835afd;
+
+              svg path {
+                stroke: #835afd;
+              }
+            }
+          }
+
+          &:hover {
+            filter: brightness(0.7);
+            -webkit-filter: brightness(0.7);
+          }
+        }
+      }
     }
   }
 }
