--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,23 @@
-@import './_base/reset.scss';
-@import './_components/buttons.scss';
-@import './_components/roomCodeButton.scss';
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html,
+:root {
+  // 10px based
+  font-size: 62.5%;
+}
+
+body {
+  background: #f8f8f8;
+  color: #29292e;
+}
+
+body,
+input,
+button,
+textarea {
+  font: 400 1.6rem 'Roboto', sans-serif;
+}
