:sparkles: finish app

--- a/src/pages/AdminRoom/styles.scss
+++ b/src/pages/AdminRoom/styles.scss
@@ -138,6 +138,11 @@
           }
         }
       }
+
+      .question-buttons {
+        display: flex;
+        gap: 1.6rem;
+      }
     }
   }
 }
